fixed font size on mobile

--- a/css/general.css
+++ b/css/general.css
@@ -3,7 +3,7 @@
 and (min-device-width : 320px)
 and (max-device-width : 480px) {
     /* Styles */
-    .header-title{  font-size: 60px; margin-top: 8%; }
+    .header-title{  font-size: 50px; margin-top: 8%; }
     .sub-header-title{  font-size: 20px; }
     .header-description{ font-size:12px; }
 }
@@ -12,7 +12,7 @@ and (max-device-width : 480px) {
 @media only screen
 and (min-width : 321px) {
     /* Styles */
-    .header-title{  font-size: 70px; margin-top: 8%; }
+    .header-title{  font-size: 60px; margin-top: 8%; }
     .sub-header-title{  font-size: 25px; }
     .header-description{ font-size:12px; }
 }
@@ -21,7 +21,7 @@ and (min-width : 321px) {
 @media only screen
 and (max-width : 320px) {
     /* Styles */
-    .header-title{  font-size: 70px; margin-top: 8%; }
+    .header-title{  font-size: 60px; margin-top: 8%; }
     .sub-header-title{  font-size: 25px; }
     .header-description{ font-size:12px; }
 }
